# special-spoon

./: README.md
flan/: README.md  flan-bridge.py  flan.toml  requirements.txt
spoonfull/: .gitignore  Cargo.toml  Rocket.toml  db.sql  package.sh
spoonfull-mcu/: .gitignore  README.md  config-mcu-sample.h  spoonfull-mcu.ino
spoonfull-mcu-mqtt/: README.md  spoonfull-mcu-mqtt.ino
spoonfull/config/: rumqttd.conf
spoonfull/migrations/2022-06-01-160952_iot/: down.sql  up.sql
spoonfull/src/: about.rs  db_model.rs  db_schema.rs  endpoints.rs  favicon.rs  home.rs  main.rs  responder.rs
spoonfull/src/endpoints/: dto.rs  humidity.rs  led.rs  temperature.rs
spoonfull/src/endpoints/dto/: data.rs  payload.rs
spoonfull/src/mqtt/: publisher.rs
spoonfull/templates/: about.hbs  footer.hbs  header.hbs  index.hbs  jschart.hbs  layout.hbs
