[package]
name = "spoonfull"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version ="0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

[profile.release]
lto = true
