[package]
name = "spoonfull"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version ="0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "numeric"] }
rocket_sync_db_pools = {version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
chrono = "0.4.19"
uuid = { version = "1.1.1", features = ["v4"] }

[profile.release]
lto = true
